CppBridge/library.h

_declspec(dllexport) int __stdcall TL_TypeInfo_GetProperty(const asITypeInfo *type, asUINT index, const char **name, int *typeId,
                                      bool *isPrivate,
                                      bool *isProtected, int *offset, bool *isReference, asDWORD *accessMask,
                                      int *compositeOffset, bool *isCompositeIndirect, bool *isConst);
_declspec(dllexport) const char * __stdcall
TL_TypeInfo_GetPropertyDeclaration(const asITypeInfo *type, asUINT index, bool includeNamespace);
_declspec(dllexport) asUINT __stdcall TL_TypeInfo_GetBehaviourCount(const asITypeInfo *type);
_declspec(dllexport) asIScriptFunction * __stdcall TL_TypeInfo_GetBehaviourByIndex(const asITypeInfo *type, asUINT index,
                                                              asEBehaviours *outBehaviour);
_declspec(dllexport) asUINT __stdcall TL_TypeInfo_GetChildFuncdefCount(const asITypeInfo *type);
_declspec(dllexport) asITypeInfo * __stdcall TL_TypeInfo_GetChildFuncdef(const asITypeInfo *type, asUINT index);
_declspec(dllexport) asITypeInfo * __stdcall TL_TypeInfo_GetParentType(const asITypeInfo *type);
_declspec(dllexport) asUINT __stdcall TL_TypeInfo_GetEnumValueCount(const asITypeInfo *type);
_declspec(dllexport) const char * __stdcall TL_TypeInfo_GetEnumValueByIndex(const asITypeInfo *type, asUINT index, int *outValue);
_declspec(dllexport) int __stdcall TL_TypeInfo_GetTypedefTypeId(const asITypeInfo *type);
_declspec(dllexport) asIScriptFunction * __stdcall TL_TypeInfo_GetFuncdefSignature(const asITypeInfo *type);
_declspec(dllexport) void * __stdcall TL_TypeInfo_SetUserData(asITypeInfo *type, void *data, asPWORD userType);
_declspec(dllexport) void * __stdcall TL_TypeInfo_GetUserData(const asITypeInfo *type, asPWORD userType);
_declspec(dllexport) asIScriptEngine * __stdcall TL_Function_GetEngine(const asIScriptFunction *func);
_declspec(dllexport) int __stdcall TL_Function_AddRef(const asIScriptFunction *func);
_declspec(dllexport) int __stdcall TL_Function_Release(const asIScriptFunction *func);
_declspec(dllexport) int __stdcall TL_Function_GetId(const asIScriptFunction *func);
_declspec(dllexport) asEFuncType __stdcall TL_Function_GetFuncType(const asIScriptFunction *func);
_declspec(dllexport) const char * __stdcall TL_Function_GetModuleName(const asIScriptFunction *func);
_declspec(dllexport) asIScriptModule * __stdcall TL_Function_GetModule(const asIScriptFunction *func);
_declspec(dllexport) const char * __stdcall TL_Function_GetConfigGroup(const asIScriptFunction *func);
_declspec(dllexport) asDWORD __stdcall TL_Function_GetAccessMask(const asIScriptFunction *func);
_declspec(dllexport) void * __stdcall TL_Function_GetAuxiliary(const asIScriptFunction *func);
_declspec(dllexport) asITypeInfo * __stdcall TL_Function_GetObjectType(const asIScriptFunction *func);
_declspec(dllexport) const char * __stdcall TL_Function_GetObjectName(const asIScriptFunction *func);
_declspec(dllexport) const char * __stdcall TL_Function_GetName(const asIScriptFunction *func);
_declspec(dllexport) const char * __stdcall TL_Function_GetNamespace(const asIScriptFunction *func);
_declspec(dllexport) const char * __stdcall TL_Function_GetDeclaration(const asIScriptFunction *func, bool includeObjectName,
                                                  bool includeNamespace, bool includeParamNames);
_declspec(dllexport) bool __stdcall TL_Function_IsReadOnly(const asIScriptFunction *func);
_declspec(dllexport) bool __stdcall TL_Function_IsPrivate(const asIScriptFunction *func);
_declspec(dllexport) bool __stdcall TL_Function_IsProtected(const asIScriptFunction *func);
_declspec(dllexport) bool __stdcall TL_Function_IsFinal(const asIScriptFunction *func);
_declspec(dllexport) bool __stdcall TL_Function_IsOverride(const asIScriptFunction *func);
_declspec(dllexport) bool __stdcall TL_Function_IsShared(const asIScriptFunction *func);
_declspec(dllexport) bool __stdcall TL_Function_IsExplicit(const asIScriptFunction *func);
_declspec(dllexport) bool __stdcall TL_Function_IsProperty(const asIScriptFunction *func);
_declspec(dllexport) bool __stdcall TL_Function_IsVariadic(const asIScriptFunction *func);
_declspec(dllexport) asUINT __stdcall TL_Function_GetParamCount(const asIScriptFunction *func);
_declspec(dllexport) int __stdcall TL_Function_GetParam(const asIScriptFunction *func, asUINT index, int *typeId, asDWORD *flags,
                                   const char **name, const char **defaultArg);
_declspec(dllexport) int __stdcall TL_Function_GetReturnTypeId(const asIScriptFunction *func, asDWORD *flags);
_declspec(dllexport) asUINT __stdcall TL_Function_GetSubTypeCount(const asIScriptFunction *func);
_declspec(dllexport) int __stdcall TL_Function_GetSubTypeId(const asIScriptFunction *func, asUINT subTypeIndex);
_declspec(dllexport) asITypeInfo * __stdcall TL_Function_GetSubType(const asIScriptFunction *func, asUINT subTypeIndex);
_declspec(dllexport) int __stdcall TL_Function_GetTypeId(const asIScriptFunction *func);
_declspec(dllexport) bool __stdcall TL_Function_IsCompatibleWithTypeId(const asIScriptFunction *func, int typeId);
_declspec(dllexport) void * __stdcall TL_Function_GetDelegateObject(const asIScriptFunction *func);
_declspec(dllexport) asITypeInfo * __stdcall TL_Function_GetDelegateObjectType(const asIScriptFunction *func);
_declspec(dllexport) asIScriptFunction * __stdcall TL_Function_GetDelegateFunction(const asIScriptFunction *func);
_declspec(dllexport) asUINT __stdcall TL_Function_GetVarCount(const asIScriptFunction *func);
_declspec(dllexport) int __stdcall TL_Function_GetVar(const asIScriptFunction *func, asUINT index, const char **name, int *typeId);
_declspec(dllexport) const char * __stdcall TL_Function_GetVarDecl(const asIScriptFunction *func, asUINT index, bool includeNamespace);
_declspec(dllexport) int __stdcall TL_Function_FindNextLineWithCode(const asIScriptFunction *func, int line);
_declspec(dllexport) int __stdcall TL_Function_GetDeclaredAt(const asIScriptFunction *func, const char **scriptSection, int *row, int *col);
_declspec(dllexport) asDWORD * __stdcall TL_Function_GetByteCode(asIScriptFunction *func, asUINT *length);
_declspec(dllexport) int __stdcall TL_Function_SetJITFunction(asIScriptFunction *func, asJITFunction jitFunc);
_declspec(dllexport) asJITFunction __stdcall TL_Function_GetJITFunction(const asIScriptFunction *func);
_declspec(dllexport) void * __stdcall TL_Function_SetUserData(asIScriptFunction *func, void *userData, asPWORD type);
_declspec(dllexport) void * __stdcall TL_Function_GetUserData(const asIScriptFunction *func, asPWORD type);