CsharpLoader/ACL/Private/NativeBindings.cs


    [LibraryImport(DllName, EntryPoint = "TL_TypeInfo_GetProperty")]
    internal static partial int TL_TypeInfo_GetProperty(
        IntPtr type,
        uint index,
        IntPtr name,
        IntPtr typeId,
        IntPtr isPrivate,
        IntPtr isProtected,
        IntPtr offset,
        IntPtr isReference,
        IntPtr accessMask,
        IntPtr compositeOffset,
        IntPtr isCompositeIndirect,
        IntPtr isConst);

    [LibraryImport(DllName, EntryPoint = "TL_TypeInfo_GetPropertyDeclaration")]
    internal static partial IntPtr TL_TypeInfo_GetPropertyDeclaration(
        IntPtr type,
        uint index,
        [MarshalAs(UnmanagedType.Bool)] bool includeNamespace);

    [LibraryImport(DllName, EntryPoint = "TL_TypeInfo_GetBehaviourCount")]
    internal static partial uint TL_TypeInfo_GetBehaviourCount(IntPtr type);

    [LibraryImport(DllName, EntryPoint = "TL_TypeInfo_GetBehaviourByIndex")]
    internal static partial IntPtr TL_TypeInfo_GetBehaviourByIndex(
        IntPtr type,
        uint index,
        IntPtr outBehaviour);

    [LibraryImport(DllName, EntryPoint = "TL_TypeInfo_GetChildFuncdefCount")]
    internal static partial uint TL_TypeInfo_GetChildFuncdefCount(IntPtr type);

    [LibraryImport(DllName, EntryPoint = "TL_TypeInfo_GetChildFuncdef")]
    internal static partial IntPtr TL_TypeInfo_GetChildFuncdef(IntPtr type, uint index);

    [LibraryImport(DllName, EntryPoint = "TL_TypeInfo_GetParentType")]
    internal static partial IntPtr TL_TypeInfo_GetParentType(IntPtr type);

    [LibraryImport(DllName, EntryPoint = "TL_TypeInfo_GetEnumValueCount")]
    internal static partial uint TL_TypeInfo_GetEnumValueCount(IntPtr type);

    [LibraryImport(DllName, EntryPoint = "TL_TypeInfo_GetEnumValueByIndex")]
    internal static partial IntPtr TL_TypeInfo_GetEnumValueByIndex(
        IntPtr type,
        uint index,
        IntPtr outValue);

    [LibraryImport(DllName, EntryPoint = "TL_TypeInfo_GetTypedefTypeId")]
    internal static partial int TL_TypeInfo_GetTypedefTypeId(IntPtr type);

    [LibraryImport(DllName, EntryPoint = "TL_TypeInfo_GetFuncdefSignature")]
    internal static partial IntPtr TL_TypeInfo_GetFuncdefSignature(IntPtr type);

    [LibraryImport(DllName, EntryPoint = "TL_TypeInfo_SetUserData")]
    internal static partial IntPtr TL_TypeInfo_SetUserData(IntPtr type, IntPtr data, uint userType);

    [LibraryImport(DllName, EntryPoint = "TL_TypeInfo_GetUserData")]
    internal static partial IntPtr TL_TypeInfo_GetUserData(IntPtr type, uint userType);

    #endregion

    #region Function Functions

    [LibraryImport(DllName, EntryPoint = "TL_Function_GetEngine")]
    internal static partial IntPtr TL_Function_GetEngine(IntPtr func);

    [LibraryImport(DllName, EntryPoint = "TL_Function_AddRef")]
    internal static partial int TL_Function_AddRef(IntPtr func);

    [LibraryImport(DllName, EntryPoint = "TL_Function_Release")]
    internal static partial int TL_Function_Release(IntPtr func);

    [LibraryImport(DllName, EntryPoint = "TL_Function_GetId")]
    internal static partial int TL_Function_GetId(IntPtr func);

    [LibraryImport(DllName, EntryPoint = "TL_Function_GetFuncType")]
    internal static partial int TL_Function_GetFuncType(IntPtr func);

    [LibraryImport(DllName, EntryPoint = "TL_Function_GetModuleName")]
    internal static partial IntPtr TL_Function_GetModuleName(IntPtr func);

    [LibraryImport(DllName, EntryPoint = "TL_Function_GetModule")]
    internal static partial IntPtr TL_Function_GetModule(IntPtr func);

    [LibraryImport(DllName, EntryPoint = "TL_Function_GetConfigGroup")]
    internal static partial IntPtr TL_Function_GetConfigGroup(IntPtr func);

    [LibraryImport(DllName, EntryPoint = "TL_Function_GetAccessMask")]
    internal static partial uint TL_Function_GetAccessMask(IntPtr func);

    [LibraryImport(DllName, EntryPoint = "TL_Function_GetAuxiliary")]
    internal static partial IntPtr TL_Function_GetAuxiliary(IntPtr func);

    [LibraryImport(DllName, EntryPoint = "TL_Function_GetObjectType")]
    internal static partial IntPtr TL_Function_GetObjectType(IntPtr func);

    [LibraryImport(DllName, EntryPoint = "TL_Function_GetObjectName")]
    internal static partial IntPtr TL_Function_GetObjectName(IntPtr func);

    [LibraryImport(DllName, EntryPoint = "TL_Function_GetName")]
    internal static partial IntPtr TL_Function_GetName(IntPtr func);

    [LibraryImport(DllName, EntryPoint = "TL_Function_GetNamespace")]
    internal static partial IntPtr TL_Function_GetNamespace(IntPtr func);

    [LibraryImport(DllName, EntryPoint = "TL_Function_GetDeclaration")]
    internal static partial IntPtr TL_Function_GetDeclaration(
        IntPtr function,
        [MarshalAs(UnmanagedType.Bool)] bool includeObjectName,
        [MarshalAs(UnmanagedType.Bool)] bool includeNamespace,
        [MarshalAs(UnmanagedType.Bool)] bool includeParamNames);

    [LibraryImport(DllName, EntryPoint = "TL_Function_IsReadOnly")]
    [return: MarshalAs(UnmanagedType.Bool)]
    internal static partial bool TL_Function_IsReadOnly(IntPtr func);

    [LibraryImport(DllName, EntryPoint = "TL_Function_IsPrivate")]
    [return: MarshalAs(UnmanagedType.Bool)]
    internal static partial bool TL_Function_IsPrivate(IntPtr func);

    [LibraryImport(DllName, EntryPoint = "TL_Function_IsProtected")]
    [return: MarshalAs(UnmanagedType.Bool)]
    internal static partial bool TL_Function_IsProtected(IntPtr func);

    [LibraryImport(DllName, EntryPoint = "TL_Function_IsFinal")]
    [return: MarshalAs(UnmanagedType.Bool)]
    internal static partial bool TL_Function_IsFinal(IntPtr func);

    [LibraryImport(DllName, EntryPoint = "TL_Function_IsOverride")]
    [return: MarshalAs(UnmanagedType.Bool)]
    internal static partial bool TL_Function_IsOverride(IntPtr func);

    [LibraryImport(DllName, EntryPoint = "TL_Function_IsShared")]
    [return: MarshalAs(UnmanagedType.Bool)]
    internal static partial bool TL_Function_IsShared(IntPtr func);

    [LibraryImport(DllName, EntryPoint = "TL_Function_IsExplicit")]
    [return: MarshalAs(UnmanagedType.Bool)]
    internal static partial bool TL_Function_IsExplicit(IntPtr func);

    [LibraryImport(DllName, EntryPoint = "TL_Function_IsProperty")]
    [return: MarshalAs(UnmanagedType.Bool)]
    internal static partial bool TL_Function_IsProperty(IntPtr func);

    [LibraryImport(DllName, EntryPoint = "TL_Function_IsVariadic")]
    [return: MarshalAs(UnmanagedType.Bool)]
    internal static partial bool TL_Function_IsVariadic(IntPtr func);

    [LibraryImport(DllName, EntryPoint = "TL_Function_GetParamCount")]
    internal static partial uint TL_Function_GetParamCount(IntPtr func);

    [LibraryImport(DllName, EntryPoint = "TL_Function_GetParam")]
    internal static partial int TL_Function_GetParam(
        IntPtr func,
        uint index,
        IntPtr typeId,
        IntPtr flags,
        IntPtr name,
        IntPtr defaultArg);

    [LibraryImport(DllName, EntryPoint = "TL_Function_GetReturnTypeId")]
    internal static partial int TL_Function_GetReturnTypeId(IntPtr func, IntPtr flags);

    [LibraryImport(DllName, EntryPoint = "TL_Function_GetSubTypeCount")]
    internal static partial uint TL_Function_GetSubTypeCount(IntPtr func);

    [LibraryImport(DllName, EntryPoint = "TL_Function_GetSubTypeId")]
    internal static partial int TL_Function_GetSubTypeId(IntPtr func, uint subTypeIndex);

    [LibraryImport(DllName, EntryPoint = "TL_Function_GetSubType")]
    internal static partial IntPtr TL_Function_GetSubType(IntPtr func, uint subTypeIndex);

    [LibraryImport(DllName, EntryPoint = "TL_Function_GetTypeId")]
    internal static partial int TL_Function_GetTypeId(IntPtr func);

    [LibraryImport(DllName, EntryPoint = "TL_Function_IsCompatibleWithTypeId")]
    [return: MarshalAs(UnmanagedType.Bool)]
    internal static partial bool TL_Function_IsCompatibleWithTypeId(IntPtr func, int typeId);

    [LibraryImport(DllName, EntryPoint = "TL_Function_GetDelegateObject")]
    internal static partial IntPtr TL_Function_GetDelegateObject(IntPtr func);

    [LibraryImport(DllName, EntryPoint = "TL_Function_GetDelegateObjectType")]
    internal static partial IntPtr TL_Function_GetDelegateObjectType(IntPtr func);

    [LibraryImport(DllName, EntryPoint = "TL_Function_GetDelegateFunction")]
    internal static partial IntPtr TL_Function_GetDelegateFunction(IntPtr func);

    [LibraryImport(DllName, EntryPoint = "TL_Function_GetVarCount")]
    internal static partial uint TL_Function_GetVarCount(IntPtr func);

    [LibraryImport(DllName, EntryPoint = "TL_Function_GetVar")]
    internal static partial int TL_Function_GetVar(
        IntPtr func,
        uint index,
        IntPtr name,
        IntPtr typeId);

    [LibraryImport(DllName, EntryPoint = "TL_Function_GetVarDecl")]
    internal static partial IntPtr TL_Function_GetVarDecl(
        IntPtr func,
        uint index,
        [MarshalAs(UnmanagedType.Bool)] bool includeNamespace);

    [LibraryImport(DllName, EntryPoint = "TL_Function_FindNextLineWithCode")]
    internal static partial int TL_Function_FindNextLineWithCode(IntPtr func, int line);

    [LibraryImport(DllName, EntryPoint = "TL_Function_GetDeclaredAt")]
    internal static partial int TL_Function_GetDeclaredAt(
        IntPtr func,
        IntPtr scriptSection,
        IntPtr row,
        IntPtr col);

    [LibraryImport(DllName, EntryPoint = "TL_Function_GetByteCode")]
    internal static partial IntPtr TL_Function_GetByteCode(
        IntPtr func,
        IntPtr length);

    [LibraryImport(DllName, EntryPoint = "TL_Function_SetJITFunction")]
    internal static partial int TL_Function_SetJITFunction(
        IntPtr func,
        IntPtr jitFunc);

    [LibraryImport(DllName, EntryPoint = "TL_Function_GetJITFunction")]
    internal static partial IntPtr TL_Function_GetJITFunction(IntPtr func);

    [LibraryImport(DllName, EntryPoint = "TL_Function_SetUserData")]
    internal static partial IntPtr TL_Function_SetUserData(
        IntPtr func,
        IntPtr userData,
        uint type);

    [LibraryImport(DllName, EntryPoint = "TL_Function_GetUserData")]
    internal static partial IntPtr TL_Function_GetUserData(IntPtr func, uint type);

    #endregion
}